# infinigpt-matrix

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  REFACTOR_PLAN.md  SECURITY.md  config.json  docker-compose.yml  help.md  help.txt  infinibot.py  infinigpt.py  launcher.py  pyproject.toml  requirements.txt  schema.json  tools.py  verification.py
docs/: ai-output-disclaimer.md  architecture.md  cli.md  commands.md  configuration.md  development.md  docker.md  getting-started.md  images.md  index.md  legacy-map.md  lm-studio.md  migration.md  not-a-companion.md  ollama.md  operations.md  security.md  tools-and-mcp.md  verification.md
infinigpt/: __init__.py  __main__.py  app.py  cli.py  config.py  exceptions.py  fastmcp_client.py  history.py  interfaces.py  llm_client.py  logging_conf.py  matrix_client.py  openai_client.py  security.py  utils.py
infinigpt/handlers/: __init__.py  cmd_ai.py  cmd_help.py  cmd_model.py  cmd_mymodel.py  cmd_prompt.py  cmd_reset.py  cmd_tools.py  cmd_verbose.py  cmd_x.py  router.py
infinigpt/tools/: __init__.py  crypto.py  images.py  math.py  schema.json  text.py  (+3 more)
infinigpt_matrix.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
legacy/: infinigpt.py  schema.json
no-e2e/: config.json  requirements.txt
tests/: conftest.py  test_cli.py  test_config.py  test_fastmcp_client.py  test_handlers_model_ai_help.py  test_handlers_reset_prompt.py  test_handlers_x.py  test_history.py  test_llm_client.py  test_matrix_client_wrapper.py  test_router.py  test_security.py  test_tool_calling.py
(+1 files in other folders)
